--- a/src/index.html
+++ b/src/index.html
@@ -18,25 +18,14 @@
           <h2>Recent scores</h2>
           <button class="display-flex-column" id="refresh">Refresh</button>
         </div>
-        <ul id="score-board">
-          <li class="score-item">John - 1200</li>
-  <li class="score-item">Emma - 2400</li>
-  <li class="score-item">Sophia - 3500</li>
-  <li class="score-item">Liam - 550</li>
-  <li class="score-item">Olivia - 800</li>
-  <li class="score-item">William - 900</li>
-  <li class="score-item">Ava - 1600</li>
-  <li class="score-item">James - 2800</li>
-  <li class="score-item">Isabella - 2000</li>
-  <li class="score-item">Michael - 400</li>
-        </ul>
+        <ul id="score-board"></ul>
       </section>
       <section class="add-score-container display-flex-column">
         <h2>Add your score</h2>
-        <form action="POST" class="display-flex-column">
-          <input type="text" placeholder="Your name">
-          <input type="number" placeholder="Your score">
-          <button id="submit-score" class="display-flex-column">Submit</button>
+        <form class="display-flex-column">
+          <input type="text" placeholder="Your name" required name="name">
+          <input type="number" placeholder="Your score" required name="score">
+          <button id="submit-score" class="display-flex-column submit-score">Submit</button>
         </form>
       </section>
     </main>
