--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,8 @@
       <section class="add-score-container display-flex-column">
         <h2>Add your score</h2>
         <form class="display-flex-column">
-          <input type="text" placeholder="Your name" required name="name">
+          <p class="feedback-message"></p>
+          <input type="text" placeholder="Your name" required name="user">
           <input type="number" placeholder="Your score" required name="score">
           <button id="submit-score" class="display-flex-column submit-score">Submit</button>
         </form>
