--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,19 @@
     <header>
       <h1>LeaderBoardX</h1>
     </header>
-    <main class="main-container display-flex">
+    <main class="main-container">
       <section class="score-board-container display-flex-column">
         <div class="score-board-header display-flex">
           <h2>Recent scores</h2>
           <button class="display-flex-column" id="refresh">Refresh</button>
         </div>
-        <ul id="score-board"></ul>
+        <div class="score-title-container display-flex">
+          <h3 class="user-title">User</h3>
+          <h3 class="score-title">Score</h3>
+        </div>
+        <ul id="score-board">
+
+        </ul>
       </section>
       <section class="add-score-container display-flex-column">
         <h2>Add your score</h2>
@@ -28,6 +34,11 @@
           <input type="number" placeholder="Your score" required name="score">
           <button id="submit-score" class="display-flex-column submit-score">Submit</button>
         </form>
+        <div>
+          <div class="giffy hidden"><iframe
+              src="https://giphy.com/embed/mXkqCkfBwuo1FsUacv" width="100%" height="100%" style="position:absolute"
+              frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
+        </div>
       </section>
     </main>
   </div>
