--- a/src/index.html
+++ b/src/index.html
@@ -34,11 +34,8 @@
           <input type="number" placeholder="Your score" required name="score">
           <button id="submit-score" class="display-flex-column submit-score">Submit</button>
         </form>
-        <div>
-          <div class="giffy hidden"><iframe
-              src="https://giphy.com/embed/mXkqCkfBwuo1FsUacv" width="100%" height="100%" style="position:absolute"
-              frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
-        </div>
+        <div class="giffy hidden"><iframe onmouseover="" src="https://giphy.com/embed/mXkqCkfBwuo1FsUacv" width="100%"
+            height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
       </section>
     </main>
   </div>
