--- a/src/index.html
+++ b/src/index.html
@@ -32,10 +32,10 @@
           <p class="feedback-message"></p>
           <input type="text" placeholder="Your name" required name="user">
           <input type="number" placeholder="Your score" required name="score">
-          <button id="submit-score" class="display-flex-column submit-score">Submit</button>
+          <button id="submit-score" type="button" display-flex-column submit-score">Submit</button>
         </form>
         <div class="giffy hidden"><iframe onmouseover="" src="https://giphy.com/embed/mXkqCkfBwuo1FsUacv" width="100%"
-            height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
+            height="100%" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
       </section>
     </main>
   </div>
